--- a/初识vue/1.html
+++ b/初识vue/1.html
@@ -17,7 +17,8 @@
     Vue.config.productionTip = false // 关闭以阻止 vue 在启动时生成生产提示。
     // 创建Vue实例
     new Vue({
-      el:'#root', // 当前Vue为哪个容器服务，值通常为CSS选择器字符串
+      // 当前Vue为哪个容器服务，值通常为CSS选择器字符串
+      el:'#root', 
       // 数据供el所指定的容器去使用
       data:{
         name:'222'
